# rust-hc-crud-caps

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flake.nix  pkgs.nix
docs/: Holochain_Version_Map.md
entities-js/: README.md  package-lock.json  package.json  webpack.config.js
entities-js/src/: index.js  utils.js
src/: entities.rs  errors.rs  lib.rs  utils.rs
tests/: package-lock.json  package.json  utils.js
tests/dnas/happy_path/: dna.yaml
tests/integration/: setup.js  test_basic.js
tests/zomes/: Cargo.toml
tests/zomes/happy_path/: Cargo.toml
tests/zomes/happy_path/src/: lib.rs
