[package]
name = "hc_crud_caps"
version = "0.9.1"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/rust-hc-crud-caps"
description = "A CRUD library for Holochain zomes that implement the CAPS pattern (Chained, Header, Permalink, State-based)"
readme = "README.md"

[lib]
name = "hc_crud"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "=0.2.1"
holo_hash = { version = "=0.2.1", features = [ "hashing", "encoding" ] } # needed for "from_raw_32" method
serde = "1"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
