[package]
name = "hc_crud_caps"
version = "0.19.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/rust-hc-crud-caps"
description = "A CRUD library for Holochain zomes that implement the CAPS pattern (Chained, Header, Permalink, State-based)"
readme = "README.md"

[lib]
name = "hc_crud"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
whi_hdk_extensions = "0.14"

[dev-dependencies]
holo_hash = { version = "=0.4.1", features = [ "hashing" ] } # needed for "from_raw_32" method
rand = "0.8.3"
